syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option csharp_namespace = "AuthServerApp";

package auth;

service AuthService {
  rpc BeginRegistration (RegisterRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/auth/register/begin"
      body: "*"
    };
  }
  rpc FinishRegistration (FinishRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/auth/register/finish"
      body: "*"
    };
  }
  rpc Login (LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/auth/login"
      body: "*"
    };
  }
  rpc Refresh (RefreshRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/auth/refresh"
      body: "*"
    };
  }
  rpc Logout (google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/auth/logout"
      body: "*"
    };
  }
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message FinishRequest {
  string email = 1;
  string code = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  string jwtToken = 1;
  string refreshToken = 2;
  google.protobuf.Timestamp expiresJwt = 3;
  google.protobuf.Timestamp expiresRefresh = 4;
}

message RefreshRequest {
  string jwtToken = 1;
  string refreshToken = 2;
}